# lf-west-template

./: .gitignore  README.md  env.sh  west.yml
.west/: config
application/Blinky/: prj.conf
application/Blinky/src/: Blinky.lf
application/ClockSyncTest/: debug.conf  mimxrt1170_evk_cm7_federate__s.overlay  prj_federate__d.conf  prj_federate__s.conf
application/ClockSyncTest/src/: ClockSyncTest.lf
application/DistributedMessageTest/: mimxrt1170_evk_cm7_federate__d.overlay  prj_federate__d.conf  prj_federate__s.conf
application/DistributedMessageTest/src/: DistributedMessageTest.lf
application/HelloWorld/src/: HelloWorld.lf
application/SmartGrid/: debug.conf  mimxrt1170_evk_cm7_federate__unitB.overlay  prj_federate__unitB.conf  prj_federate__unitC.conf
application/SmartGrid/src/: smartgrid-linux.lf  smartgrid-nxp.lf
application/UserThreads/: Kconfig  debug.conf
application/UserThreads/src/: UserThreads.lf
application/src/: HelloWorld.lf
apps/HelloWorld/: CMakeLists.txt  prj.conf
apps/HelloWorld/src/: HelloWorld.lf
apps/HelloZephyr/: prj.conf
apps/HelloZephyr/src/: main.c
apps/NrfBlinky/: CMakeLists.txt  main.c
apps/NrfBlinky/src/: NrfBlinky.lf  NrfToggleGPIO.lf
apps/Timer/: CMakeLists.txt
apps/Timer/src/: Timer.lf
manifest-repo/: west.yml
scripts/: lf_build.py  lfc.py  west-commands.yml
